# nullpom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  check_code.yml  flake8.yml  pytest.yml  python_publish.yml
nullpom/: __init__.py  main.py
tests/: test_nullpom.py
