[tool.poetry]
name = "nullpom"
version = "0.0.0"
description = "test"
authors = ["tenajima <tenajima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
scikit-learn = "^0.24.1"
pandas = "^1.2.3"
lightgbm = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
