[tool.poetry]
name = "nullpom"
version = "0.0.0"
description = "Library to easily run Null Importances."
authors = ["tenajima <tenajima@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/tenajima/nullpom"
documentation = "https://github.com/tenajima/nullpom"
keywords = ["null importance", "feature selection", "importance", "kaggle"]

[tool.poetry.dependencies]
python = "^3.7.1"
scikit-learn = "^0.24.1"
pandas = "~1.1"
lightgbm = "^3.1.1"
matplotlib = "3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
jupyterlab = "^3.0.10"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
